# image-reducer

./: .gitignore  README.md  SAMPLE_FORMAT.md  pyproject.toml
image_reducer/: __init__.py  api.py  audit.py  cli.py  config.py  dataset.py  geometry.py  labels.py  pipeline.py  registry.py  runner.py  serve.py  service.py
image_reducer/webui/: index.html
tests/: test_audit.py  test_pipeline.py  test_webapp.py
